--- a/assets/styles/admin.css
+++ b/assets/styles/admin.css
@@ -38,10 +38,6 @@ input {
   padding: 3px;
 }
 
-input.planningInput::-webkit-input-placeholder {
-   color: var(--color-menuItem);
-}
-
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -67,6 +63,10 @@ div::-webkit-scrollbar-thumb
   border-radius: 3px;
   box-shadow: inset 0 0 4px rgba(0,0,0,.3);
   background-color: rgb(61, 62, 77);
+}
+
+::-webkit-input-placeholder {
+  color: rgba(0,0,0,.3);
 }
 
 #content {
